添加注释，删除无用代码